# term-cast

./: .gitignore  Cargo.toml  README.md
src/: cast.rs  fileserver.rs  main.rs  media.rs
src/app/: input.rs  mod.rs  tests.rs  view.rs
src/app/cast/: error.rs  mod.rs
src/cast/: mod.rs
src/ui/: input.rs  mod.rs  model.rs  tests.rs  view.rs
