[package]
name = "term-cast"
version = "0.1.0"
authors = ["Jayden Dumouchel <jdumouch@ualberta.ca>"]
edition = "2018"

[dependencies]
# Async
tokio = { version = "0.3.4", features = ["full", "sync"] } 

# Chromecast
rust_cast = "0.15.0" 
mdns = "1.1.0"
futures-util = "*"
futures = "*"
warp = "0.2"
resolv = "0.2.0"

# TUI
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.17", features = ["event-stream"] }

dirs = { version = "3.0.1" }